<?xml version="1.0"?>
<package>
  <name>art_msgs</name>
  <version>0.0.0</version>
  <description>

     This package defines messages specific to ART autonomous vehicle.

  </description>
  <maintainer email="amogh@todo.todo">amogh</maintainer>
  <author>Jack O'Quin</author>
  <license>TODO</license>
  <!-- <review status="experimental" notes=""/> -->
  <!-- <url>http://ros.org/wiki/art_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <export>
    <!--cpp cflags="-I${prefix}/include" /-->
    <!--rosbag migration_rule_file="migration_rules/art_msgs.bmr"/-->
  </export>

</package>


